--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./sass/styles.scss"> -->
-    <title>TO DO LIST</title>
+    <link rel="stylesheet" href="./sass/styles.scss">
+    <title>TO DO LIST- CRUD</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>Simple TODO list</h1>
+    <section class="crud">
+        <article>
+            <p>Edit TODO</p>
+            <form class="crud__form">
+                <input type="text" placeholder="escribe" required >
+                <input type="submit" value="Modify">
+            </form>
+        </article>
+        <br>
+        <article>
+            <table class="crud__table">
+                <thead>
+                    <tr>
+                        <th>ToDo</th>
+                        <th>Options</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <button class="edit"><img src="./assets/pencil icon.png" alt="pencil edit"></button>
+                            <button class="delete" ><img src="./assets/trash icon.png" alt="delete"</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+    </section>
 <script src="./js/app.js"></script>
 </body>
 </html>
